ui/webui/resources/cr_components/composebox/composebox_favicon_group.css
/* Copyright 2026 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #import=//resources/cr_elements/cr_shared_vars.css.js
 * #scheme=relative
 * #css_wrapper_metadata_end */

:host {
  align-items: center;
  display: flex;
}

.favicon-item {
  aspect-ratio: 1/1;
  background-color: #fff;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 16px;
  border: 2px solid var(--composebox-favicon-border-color, #f2f2f2);
  border-radius: 50%;
  box-sizing: border-box;
  height: 20px;
  position: relative;
  width: 20px;
}

.favicon-item:nth-child(1) {
  z-index: 3;
}

.favicon-item:nth-child(2) {
  z-index: 2;
}

.favicon-item:nth-child(3) {
  z-index: 1;
}

.favicon-item:not(:first-child) {
  margin-inline-start: -7px;
}

#more-items {
  align-items: center;
  color: var(--color-sys-on-surface-subtle, var(--cr-fallback-color-on-surface-subtle));
  display: flex;
  font-family: inherit;
  font-size: 11px;
  font-weight: 500;
  line-height: 16px;
  margin-inline-start: 4px;
}

